--- a/client/famous/localPopUp/local_PopUp.html
+++ b/client/famous/localPopUp/local_PopUp.html
@@ -58,8 +58,8 @@
 </template>
 <template name="rankImg">
     <div class="overlayRank rankImg">
-        <div class="barHorizontal"></div>
-        <div class="barVertical"></div>
+        <div class="barHorizontal greidentHorizontal"></div>
+        <div class="barVertical greidentVertical"></div>
     </div>
     <div class="textCenter large-12 medium-12 columns backButton">    
         <div id="backButton" class="button ui" style="background:cyan;">            
