--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -63,7 +63,7 @@
                         <label class="large-9 small-9 medium-9 columns textRight">
                             
                                 <div id="emailEntered" class="large-10 small-10 medium-10 columns lowerCase" contenteditable="false">
-                                    {{profile.email}}
+                                    {{myEmail}}
                                 </div>
                                 <i class="fa fa-pencil"></i>
                         </label>
