--- a/client/famous/gamePopUp/gamePopUp.html
+++ b/client/famous/gamePopUp/gamePopUp.html
@@ -102,7 +102,7 @@
                     <div class="remove textRight"></div>
                     <div class="large-12 columns">
                         <div class="">
-                            <p>challange was sent to:</p>
+                            <p>{{message}}</p>
                         </div>
                         {{#each emails}}
                             {{ids}},
