facebook and removed

--- a/client/famous/localPopUp/local_PopUp.html
+++ b/client/famous/localPopUp/local_PopUp.html
@@ -32,10 +32,13 @@
     <div id="tapTapEnded2" class="gameEndPopUp2 overlay">
             <div data-alert="" class="popups panel large-12 medium-12 small-12 columns textCenter">
                 <!-- {{> GamerTimerimer}} -->
-                <div id="endGame2" class="button ui " style="background:cyan;">            
+                <div id="endGame2" class="button ui column large-6 medium-6 small-6" style="background:cyan;">            
                     {{lang.gamePopUp.restart}}
                 </div>
-                <a id="shareWithFacebook" class="large-4 small-4 medium-4 columns" ><i class="fa fa-facebook-square"></i> </a>
+                <div id="shareWithFacebook" class="button ui column large-6 medium-6 small-6" style="">            
+                    <i class="fa fa-facebook-square"></i>
+                </div>
+                <!-- <a id="" class="large-4 small-4 medium-4 columns" ><i class="fa fa-facebook-square"></i> </a> -->
             </div>   
     </div>
 </template>
