--- a/client/famous/gameTimer/gameTimer.html
+++ b/client/famous/gameTimer/gameTimer.html
@@ -5,7 +5,7 @@
 		<div class="small-4 large-4  medium-4 columns">...</div>
 		<!-- <div id="reStart" class="small-1 large-1 medium-1 columns restart textRight">R</div> -->
 		<div id="endGame" class="small-1 large-1 medium-1 columns endGame textRight">X</div>
-	
+
 	</div>
 	<div class="row">
 		<div class="large-3 small-3 medium-3 columns textRight">{{lang.timer.score}}</div>
@@ -16,22 +16,50 @@
 			<div class="gametimemins">00:</div>
 			<div class="gametimeseconds">00</div>
 		</div>
-		
+
 		<!-- <div id="endGame" class="small-1 columns">X</div> -->
 		<!-- <div class="small-1 columns textRight" style="background: grey;" id="endGame">X</div> -->
 		{{> onScore}}
 	</div>
 	<div class="row">
 	<div class="large-12 small-12 medium-12 columns">
-		<div class="large-6 small-6 medium-6 columns" >	
+		<div class="large-6 small-6 medium-6 columns" >
 			{{lang.facebook.shareThisScore}}
 		</div>
 <!-- 		<div id="shareWithFacebook" class="button ui large-6 small-6 medium-6 columns" style=";">
-                    <i class="fa fa-facebook-square"></i> 
+                    <i class="fa fa-facebook-square"></i>
                 </div> -->
 		<div id="shareWithFacebook" class="large-6 small-6 medium-6 columns" ><i class="fa fa-facebook-square"></i> </div>
 		<!-- <a id="shareWithTwitter" class="large-4 small-4 medium-4 columns" ><i class="fa fa-twitter-square"></i> </a> -->
 		<!-- <a id="shareWithAny" class="large-4 small-4 medium-4 columns" ><i class="fa fa-adn-square"></i> </a> -->
 		</div>
+
+		<!-- <button href="#" data-dropdown="drop1" aria-controls="drop1" aria-expanded="false" class="small secondary radius button dropdown">Choose a time</button><br>
+		<ul id="drop1" data-dropdown-content class="f-dropdown" aria-hidden="true">
+		  <li><a href="#">1</a></li>
+		  <li><a href="#">2</a></li>
+		  <li><a href="#">3</a></li>
+		  <li><a href="#">5</a></li>
+		  <li><a href="#">10</a></li>
+		  <li><a href="#">15</a></li>
+		  <li><a href="#">20</a></li>
+		</ul> -->
+		<select>
+		  <option value="1" selected="{{isSelected 1}}">1 min</option>
+		  <option value="2" selected="{{isSelected 2}}">2 mins</option>
+		  <option value="3" selected="{{isSelected 3}}">3 mins</option>
+		  <option value="5" selected="{{isSelected 5}}">5 mins</option>
+		  <option value="10" selected="{{isSelected 10}}">10 mins</option>
+		  <option value="15" selected="{{isSelected 15}}">15 mins</option>
+		  <option value="20" selected="{{isSelected 20}}">20 mins</option>
+		</select>
 	</div>
+	<script type="text/javascript">
+		$(document).foundation({
+		  dropdown: {
+		    // specify the class used for active dropdowns
+		    active_class: 'open'
+		  }
+		});
+	</script>
 </template>
