--- a/whogothappy/client/game/game.html
+++ b/whogothappy/client/game/game.html
@@ -1,6 +1,9 @@
 <template name="game">
 <div class="ui container">
-<div class="ui dimmer"><div class="ui loader"></div></div>
+<div class="ui active dimmer pauser"><div class="ui loader"></div></div>
+<div class="ui active dimmer startGame">
+  <button class="ui orange button onStartGame">START</button>
+</div>
 <div class="ui four cards">
   <a class="card">
     <div class="image">
