beginner level game complete

--- a/whogothappy/client/header/header.html
+++ b/whogothappy/client/header/header.html
@@ -4,7 +4,7 @@
         <a class="launch item {{setLaunchButton}}" id="left_slide_submenu">
             <i class="{{setLaunchButton}} icon"></i>
         </a>
-        <a class="icon item" id="headerNamea" href="/home">WhoGotHappy</a>
+        <a class="icon item" id="headerName" href="/home">WhoGotHappy</a>
         <div class="right menu">
             <a href="/settings" class="launch item content" id="right_slide_submenu">
               <i class="settings icon"></i>
