backward compatibility added

--- a/whogothappy/client/game/game.html
+++ b/whogothappy/client/game/game.html
@@ -4,87 +4,113 @@
 <div class="ui active dimmer startGame">
   <button class="ui orange button onStartGame">START</button>
 </div>
-<div class="ui four cards">
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
-  <a class="card">
-    <div class="image">
-      <img src="{{this}}">
-    </div>
-  </a>
+<div class="ui images imageContainer">
+
+  <img class="ui image" src="">
+  <img class="ui image" src="">
+  <img class="ui image" src="">
+  <img class="ui image" src="">
+
+
+  <img class="ui image" src="">
+  <img class="ui image" src="">
+  <img class="ui image" src="">
+  <img class="ui image" src="">
+
+
+  <img class="ui image" src="">
+  <img class="ui image" src="">
+  <img class="ui image" src="">
+  <img class="ui image" src="">
+
+
+  <img class="ui image" src="">
+  <img class="ui image" src="">
+  <img class="ui image" src="">
+  <img class="ui image" src="">
+
 </div>
+<!-- <div class="ui four cards">
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+  <a class="card">
+    <div class="image">
+      <img src="{{this}}">
+    </div>
+  </a>
+</div> -->
 </div>
 </template>
