--- a/whogothappy/client/game/game.html
+++ b/whogothappy/client/game/game.html
@@ -6,28 +6,28 @@
 </div>
 <div class="ui images imageContainer">
 
-  <img class="ui image" src="">
-  <img class="ui image" src="">
-  <img class="ui image" src="">
-  <img class="ui image" src="">
+  <img class="ui image" src="/images/happy.png">
+  <img class="ui image" src="/images/happy.png">
+  <img class="ui image" src="/images/happy.png">
+  <img class="ui image" src="/images/happy.png">
 
 
-  <img class="ui image" src="">
-  <img class="ui image" src="">
-  <img class="ui image" src="">
-  <img class="ui image" src="">
+  <img class="ui image" src="/images/happy.png">
+  <img class="ui image" src="/images/happy.png">
+  <img class="ui image" src="/images/happy.png">
+  <img class="ui image" src="/images/happy.png">
 
 
-  <img class="ui image" src="">
-  <img class="ui image" src="">
-  <img class="ui image" src="">
-  <img class="ui image" src="">
+  <img class="ui image" src="/images/happy.png">
+  <img class="ui image" src="/images/happy.png">
+  <img class="ui image" src="/images/happy.png">
+  <img class="ui image" src="/images/happy.png">
 
 
-  <img class="ui image" src="">
-  <img class="ui image" src="">
-  <img class="ui image" src="">
-  <img class="ui image" src="">
+  <img class="ui image" src="/images/happy.png">
+  <img class="ui image" src="/images/happy.png">
+  <img class="ui image" src="/images/happy.png">
+  <img class="ui image" src="/images/happy.png">
 
 </div>
 <!-- <div class="ui four cards">
