--- a/whogothappy/client/home/index.html
+++ b/whogothappy/client/home/index.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="height=device-height, width=device-width, user-scalable=no" />
   <meta name="touch-event-mode" content="native=false, native=disable, native=no" />
   <link rel="shortcut icon" type="image/png" href="/images/logo.png"/>
-  <meta name="description" content="Who Got Happy is a happy game.">
+  <meta name="description" content="WhoGotHappy is a face tapping game, in which you have to tap the happiest face from the images.">
 </head>
 
 <body>
