--- a/whogothappy/client/left_menu/left_menu.html
+++ b/whogothappy/client/left_menu/left_menu.html
@@ -7,7 +7,7 @@
     	<a class="ui logo icon image" href="/profile" >
       		<img class="ui avatar image" src="{{user.profile.profile_picture}}">
     	</a>
-    	<a href="/profile"><b>{{user.getName}}</b></a>
+    	<a href="/profile" id="profile"><b>{{user.getName}}</b></a>
   	</div>
 <!--     <div class="item">
       <a class="ui logo icon image" href="/find_friends/0" >
