select img type

--- a/client/camera/camera.html
+++ b/client/camera/camera.html
@@ -1,7 +1,9 @@
 <template name="camera">
-<div class="row">
-    <div id="takePicture" class="button ui" style="background:cyan;">Take Picture</div>
-    <img id="myPictureData" src="" />
-    <img id="myPictureLocation" src="" />
+<div class="row " >
+    <div class="large-12 small-12 medium-12 columns panel textCenter">
+        <div id="takePicture" class="button ui" style="background:cyan;">Take Picture</div>
+        <img id="myPictureData" src="" />
+        <img id="myPictureLocation" src="" />
+    </div>
 </div>
 </template>
