--- a/client/homepage/homepage.html
+++ b/client/homepage/homepage.html
@@ -19,6 +19,7 @@
         </div>
         {{> updated}}
         {{> ratingPopup}}
+        {{> setImageTypePopup}}
         <!-- </div> -->
     </div>
 </template>
