--- a/client/camera/select/select.html
+++ b/client/camera/select/select.html
@@ -3,7 +3,7 @@
     <div class="large-12 small-12 medium-12 columns panel textCenter">
       {{#each images}}
           <div class="card small-3 columns sortable" >
-              <img src="{{this}}" />
+              <img src="{{this.url}}" />
           </div>
       {{/each}}
     </div>
