changes made as per newer version

--- a/app/client/famous/gamePopUp/gamePopUp.html
+++ b/app/client/famous/gamePopUp/gamePopUp.html
@@ -121,7 +121,7 @@
 </template>
 
 
-<template name="setImageTypePopup">
+<!-- <template name="setImageTypePopup">
     <div id="setImageTypePopup" class="">
             <div data-alert="" class="popups  large-12 medium-12 small-12 columns textCenter">
                 What type of image is this?
@@ -136,4 +136,4 @@
             </div>
 
     </div>
-</template>
+</template> -->
