--- a/app/client/homepage/homepage.html
+++ b/app/client/homepage/homepage.html
@@ -3,8 +3,8 @@
 	    <!-- <div class="column large-12 small-12 medium-12 scrolly"> -->
     		<!-- {{> timeCount}}  -->
         <a id="iconButton" href="{{lang.settings.apkDownloadLink}}" class="button {{#if cordova}} hideItem {{else}}  {{/if}}"><img src="/images/happy.png"></a>
-        {{> select}}
-        {{> camera}}
+        <!-- {{> select}}
+        {{> camera}} -->
     	<div class="row" id="rest">
     		{{> menuListPanel}}
     	</div>
