new image uploaded

--- a/app/client/homepage/homepage.html
+++ b/app/client/homepage/homepage.html
@@ -17,6 +17,7 @@
         <div class="zoomed">
 
         </div>
+        {{> uploadImages}}
         {{> updated}}
         {{> ratingPopup}}
         {{> setImageTypePopup}}
