--- a/app/client/uploadImages/uploadImages.html
+++ b/app/client/uploadImages/uploadImages.html
@@ -1,16 +1,18 @@
 <template name="uploadImages">
-    <div class="large-12 small-12 medium-12 columns panel">
+    <div class="large-12 small-12 medium-12 columns panel {{uploadImg_disp}}">
         <div class="textCenter large-12 medium-12 small-12  columns">
-            <div id="" class="button ui" style="background:cyan;">
-                Upload Image
+            <div id="upl"  class="button ui" style="background:cyan">
+               <label for="file-img" style="color: white;">Upload Image
+               </label> 
             </div>
         </div>
-        <div class="textCenter large-12 medium-12 small-12  columns">
+            <input type="file" name="file" class="cloudinary-fileupload" data-cloudinary-field="pytzaemo" id="file-img" style="display:none"/>
+<!--         <div class="textCenter large-12 medium-12 small-12  columns">
             <div tabindex="500" class="btn btn-primary btn-file browsebtn"><i class="glyphicon glyphicon-folder-open"></i>
                 <span class="hidden-xs">Browse …</span>
                 <input type="file" name="file" class="cloudinary-fileupload" data-cloudinary-field="pytzaemo" id="file-img" />
             </div>
-        </div>
+        </div> -->
         <div id="" class="large-12 small-12 medium-12 columns" style="width: 507px; height: auto;">
             {{#each uploadImg}}
             <div class="card small-3 columns sortable">
