--- a/app/client/homepage/homepage.html
+++ b/app/client/homepage/homepage.html
@@ -17,7 +17,7 @@
         <div class="zoomed">
 
         </div>
-        <!-- {{> upload}} -->
+        {{> admin_approved}}
         {{> uploadImages}}
         {{> updated}}
         {{> ratingPopup}}
